# openff-toolkit

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chemical-starting-points.md  Dangerfile  FAQ.md  LICENSE  MANIFEST.in  README.md  The-PropertyEstimator-format.md  The-SMIRFF-force-field-format.md  The-SMIRNOFF-force-field-format.md  codecov.yml  environment.yml  oe_license.txt.enc  pixi.toml  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py  trajectory.csv  versioneer.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  api-breaks.yml  beta_rc.yaml  check-openeye-rc.yaml  check-openmm-rc.yaml  codeql.yml  commentbot.yml  conda.yml  conda_010X.yml  dangerbot.yml  examples.yml  installer.yml  lint.yaml  lint.yml  openmm-testing.yml  package-build.yml  py36-checks.yml  release.yml  ruby.yml  test-openeye-rc.yaml  test-openmm-rc.yaml
binder/: postBuild
devtools/conda-envs/: base-examples.yaml  base-tests.yaml  beta_rc_env.yaml  conda.yaml  conda_010X.yaml  conda_oe.yaml  conda_oe_010X.yaml  dev_env.yaml  examples.yaml  examples.yml  frappuccino_env.yml  installer.yaml  no-openeye-examples.yaml  no-openeye.yaml  no_toolkits.yaml  openeye-examples.yaml  openeye.yaml  openmm_test_env.yaml  rdkit-examples.yaml  rdkit.yaml  release-build.yaml  test_env.yaml  test_env_no_openeye.yaml
devtools/conda-recipe/: README.md  meta.yaml
devtools/gh-actions/: initialize_conda.sh
devtools/scripts/: build_cookiecutter_json.py  create_conda_env.py
devtools/travis-ci/: before_install.sh  install.sh
docs/: 404.md  Makefile  chemicalenvironments.rst  concepts.md  conf.py  conftest.py  converting.rst  developing.md  developing.rst  environment.yml  examples.md  examples.rst  faq.md  faq.rst  index.md  index.rst  installation.md  installation.rst  make.bat  nbval-sanitize.cfg  properties.rst  propertyestimator.rst  propertyworkflows.rst  readthedocs.yml  releasehistory.md  releasehistory.rst  requirements.txt  smirnoff.md  smirnoff.rst  topology.md  topology.rst  typing.rst  utils.rst  virtualsites.md  virtualsites.rst
docs/_static/: styles.css
docs/_templates/: globaltoc.html  header.html  layout.html  sidebar.html
docs/api/: toolkits.md
docs/users/: concepts.md  developing.md  molecule_conversion.md  molecule_cookbook.ipynb  pdb_cookbook.ipynb  smirnoff.md  virtualsites.md  viz.py  zw_l_alanine.sdf
examples/: README.md  environment.yaml  examples_helper.py
examples/AlkEtOH/: README.md
examples/AlkEtOH2/: README.md
examples/QCArchive_interface/: QCarchive interface.ipynb  QCarchive_interface.ipynb
examples/SMIRFF_comparison/: compare_molecule_energies.py  compare_set_energies.py
examples/SMIRFF_simulation/: AlkEthOH_r51.mol2  data.csv  run_molecule.py
examples/SMIRNOFF_comparison/: README.md  compare_molecule_energies.py  compare_set_energies.py
examples/SMIRNOFF_simulation/: README.md  run_molecule.py  run_simulation.ipynb  trajectory.nc
examples/advanced_examples/: README.md
examples/bonds_AlkEtOH/: README.md
examples/check_dataset_parameter_coverage/: .gitignore  README.md  check_parameter_coverage.ipynb  example_molecules.sdf
examples/chemicalEnvironments/: EnvMoveTypesAndWeights.ipynb  README.md  create_move_types_and_weights.ipynb  moveTrees.uniq.Angle.txt  moveTrees.uniq.Bond.txt  moveTrees.uniq.Torsion.txt  smirksEnvDepict.ipynb  smirksEnvMoves.ipynb  test_environments.ipynb  using_environments.ipynb
examples/compute_small_molecule_energies/: README.md  conformer_energies.ipynb
examples/conformer_energies/: .gitignore  README.md  conformer_energies.ipynb  conformer_energies.py
examples/conversion_amber_gromacs/: README.md  convert_to_amber_gromacs.ipynb
examples/forcefield_modification/: .gitignore  ManipulateParameters.ipynb  README.md  forcefield_modification.ipynb
examples/host_guest_simulation/: README.md  smirnoff_host_guest.ipynb
examples/inspect_assigned_parameters/: README.md  inspect_assigned_parameters.ipynb
examples/label_molecule/: README.md  get_parameter_statistics.py  label_molecule.ipynb  label_molecule.py
examples/mixedFF_complex/: README.md
examples/mixedFF_structure/: README.md  generate_mixedFF_complex.py
examples/parm@frosst/: README.md  make_subset.py  sample.py
examples/partial_bondorder/: Frosst_AlkEtOH_extracarbons.ffxml  Frosst_AlkEthOH_extracarbons.ffxml  README.md  test_partialbondorder.ipynb
examples/property_estimator/: single_machine.py  start_client.py  start_server.py
examples/rdkit_openeye_comparison/: compare_rdk_oe_mol_loading.ipynb
examples/smarty_smiluations/: AlkEthOH.csv  Hydrogen.csv  README.md  Simple-Decorators.csv
examples/smirff99Frosst/: README.md  example.ffxml  log1.parm99.txt  parameter_usage.ipynb  parm_FrosstPrunedSmirffTorsions.txt  smirff99Frosst.ffxml  smirffishFrcmod.Torsions.parm99.txt  smirffishFrcmod.Vdw.parm99.txt  smirffishFrcmod.parm99Frosst.txt
examples/smirky_sampler/: README.md  correctAngles.py  correctAtoms.py  correctBonds.py  correctTorsions.py  empty_smirky.py  startEmpty_Angle.csv  startEmpty_Angle.py  (+1 more)
openforcefield/: __init__.py  _version.py  datasets.py  forcefield.py  measurements.py  packmol.py  properties.py  substances.py  thermodynamics.py  thermoml_parser.py  topology.py
smarty/: .cli.py.swp  __init__.py  cli.py  environment.py  forcefield.py  forcefield_labeler.py  forcefield_utils.py  gbsaforces.py  sampler_elemental.py  smarty.py  utils.py
smarty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
utilities/: README.md  oeb-to-FF-and-tripos-mol2.py
(+1260 files in other folders)
